--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   <script>
     var b = Buttons
     // Set constraints for the video stream
-  var constraints = { video: { facingMode: "user" }, audio: false };
+  var constraints = { video: { facingMode: "environment" }, audio: false };
   // Define constants
   const cameraView = document.querySelector("#camera--view"),
       cameraOutput = document.querySelector("#camera--output"),
@@ -66,9 +66,34 @@
       cameraSensor.getContext("2d").drawImage(cameraView, 0, 0);
       cameraOutput.src = cameraSensor.toDataURL("image/webp");
       cameraOutput.classList.add("taken");
+
+      var imageData = cameraSensor.getImageData(imageX, imageY, image.width, image.height);
+      var dataArr = imageData.data;
+
+      for(var i = 0; i < dataArr.length; i += 4)
+      {
+          var r = dataArr[i]; // Red color lies between 0 and 255
+          var g = dataArr[i + 1]; // Green color lies between 0 and 255
+          var b = dataArr[i + 2]; // Blue color lies between 0 and 255
+          var a = dataArr[i + 3]; // Transparency lies between 0 and 255
+
+          var invertedRed = 255 - r;
+          var invertedGreen = 255 - g;
+          var invertedBlue = 255 - b;
+
+          dataArr[i] = invertedRed;
+          dataArr[i + 1] = invertedGreen;
+          dataArr[i + 2] = invertedBlue;
+      }
+
+      cameraSensor.putImageData(imageData, imageX, imageY);
+
+
+
   };
   // Start the video stream when the window loads
   window.addEventListener("load", cameraStart, false);
+
 
 
   </script>
