--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <!-- Camera output -->
     <img src="//:0" alt="" id="camera--output">
     <!-- Camera trigger -->
-    <button id="camera--trigger">Take a picture</button>
+    <button id="camera--trigger">Take a picture 2</button>
   </main>
 
   <script>
@@ -72,6 +72,7 @@
       ctx.drawImage(cameraView,100, 100);
       cameraOutput.src = cameraSensor.toDataURL("image/webp");
       cameraOutput.classList.add("taken");
+      alert(ctx.width)
       if (ctx.width > 0) {
         var imageData = ctx.getImageData(0, 0, cameraSensor.width, cameraSensor.height);
         var dataArr = imageData.data;
